--- a/miscellaneous/enumerations.html
+++ b/miscellaneous/enumerations.html
@@ -191,6 +191,12 @@
                         <span class="name "><b>CurrentUserEvent</b><a href="#CurrentUserEvent"><span class="icon ion-ios-link"></span></a></span>
                     </td>
                 </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <div class="io-description"><p>Enumeration of current user events.</p>
+</div>
+                        </td>
+                    </tr>
                         <tr>
                             <td class="col-md-4">
                                 &nbsp;Set
@@ -221,6 +227,12 @@
                         <span class="name "><b>DashboardEvent</b><a href="#DashboardEvent"><span class="icon ion-ios-link"></span></a></span>
                     </td>
                 </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <div class="io-description"><p>Enumeration of dashboard events.</p>
+</div>
+                        </td>
+                    </tr>
                         <tr>
                             <td class="col-md-4">
                                 &nbsp;PatchHeader
@@ -251,6 +263,12 @@
                         <span class="name "><b>ToastEvent</b><a href="#ToastEvent"><span class="icon ion-ios-link"></span></a></span>
                     </td>
                 </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <div class="io-description"><p>Enumeration of toast events.</p>
+</div>
+                        </td>
+                    </tr>
                         <tr>
                             <td class="col-md-4">
                                 &nbsp;All
@@ -396,6 +414,12 @@
                         <span class="name "><b>ToastKey</b><a href="#ToastKey"><span class="icon ion-ios-link"></span></a></span>
                     </td>
                 </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <div class="io-description"><p>Enumeration of toast keys.</p>
+</div>
+                        </td>
+                    </tr>
                         <tr>
                             <td class="col-md-4">
                                 &nbsp;Global
@@ -416,6 +440,12 @@
                         <span class="name "><b>ToastType</b><a href="#ToastType"><span class="icon ion-ios-link"></span></a></span>
                     </td>
                 </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <div class="io-description"><p>Enumeration of toast types.</p>
+</div>
+                        </td>
+                    </tr>
                         <tr>
                             <td class="col-md-4">
                                 &nbsp;Error
