--- a/miscellaneous/typealiases.html
+++ b/miscellaneous/typealiases.html
@@ -199,6 +199,12 @@
             </tr>
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Type representing the application configuration.</p>
+</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
                     <code>    <code>literal type</code>
 </code>
                 </td>
@@ -211,6 +217,12 @@
                 <td class="col-md-4">
                     <a name="CaptchaResponse"></a>
                     <span class="name "><b>CaptchaResponse</b><a href="#CaptchaResponse"><span class="icon ion-ios-link"></span></a></span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Type representing CAPTCHA response.</p>
+</div>
                 </td>
             </tr>
             <tr>
@@ -231,6 +243,12 @@
             </tr>
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Type representing the application environment configuration.</p>
+</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
                     <code>    <code>literal type</code>
 </code>
                 </td>
@@ -243,6 +261,12 @@
                 <td class="col-md-4">
                     <a name="PlainObject"></a>
                     <span class="name "><b>PlainObject</b><a href="#PlainObject"><span class="icon ion-ios-link"></span></a></span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Type representing a plain object.</p>
+</div>
                 </td>
             </tr>
             <tr>
@@ -263,6 +287,12 @@
             </tr>
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Type representing process status.</p>
+</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
                     <code>    <code>&quot;execute&quot; | &quot;ready&quot; | &quot;crashed&quot;</code>
 </code>
                 </td>
@@ -279,6 +309,12 @@
             </tr>
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Type representing sort order.</p>
+</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
                     <code>    <code>&quot;ASC&quot; | &quot;DESC&quot;</code>
 </code>
                 </td>
@@ -291,6 +327,12 @@
                 <td class="col-md-4">
                     <a name="SystemTheme"></a>
                     <span class="name "><b>SystemTheme</b><a href="#SystemTheme"><span class="icon ion-ios-link"></span></a></span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Type representing system themes.</p>
+</div>
                 </td>
             </tr>
             <tr>
@@ -443,6 +485,12 @@
             </tr>
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Form type for a column in the Explorer.</p>
+</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
                     <code>    <code></code>
 </code>
                 </td>
@@ -459,6 +507,12 @@
             </tr>
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Form type for an object in the Explorer.</p>
+</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
                     <code>    <code></code>
 </code>
                 </td>
@@ -471,6 +525,12 @@
                 <td class="col-md-4">
                     <a name="TabForm"></a>
                     <span class="name "><b>TabForm</b><a href="#TabForm"><span class="icon ion-ios-link"></span></a></span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Form type for a tab in the Explorer.</p>
+</div>
                 </td>
             </tr>
             <tr>
@@ -581,6 +641,12 @@
             </tr>
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Type definition for the user form.</p>
+</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
                     <code>    <code></code>
 </code>
                 </td>
@@ -599,6 +665,12 @@
             </tr>
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Type representing the DTO for the XDB export response.</p>
+</div>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
                     <code>    <code>literal type</code>
 </code>
                 </td>
@@ -611,6 +683,12 @@
                 <td class="col-md-4">
                     <a name="XdbExportForm"></a>
                     <span class="name "><b>XdbExportForm</b><a href="#XdbExportForm"><span class="icon ion-ios-link"></span></a></span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Type representing the form controls for the XDB export.</p>
+</div>
                 </td>
             </tr>
             <tr>
