--- a/miscellaneous/variables.html
+++ b/miscellaneous/variables.html
@@ -221,6 +221,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Injection token for the API URL.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -241,6 +247,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Injection token for the file storage URL.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -261,6 +273,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Injection token for the front-end URL.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -281,6 +299,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Injection token for the media storage URL.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -301,6 +325,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Injection token for the temporary files storage URL.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -321,6 +351,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Injection token for the WebP media format support flag.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -756,6 +792,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Preloader channel name for objects.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -785,6 +827,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Preloader channel name.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -814,6 +862,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Preloader channel name. *</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -843,6 +897,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Preloader channel name for object details.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -936,6 +996,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Link ID for theme variant.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -962,6 +1028,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>LS store key for theme variant.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
