--- a/injectables/XdbExportDialogViewModel.html
+++ b/injectables/XdbExportDialogViewModel.html
@@ -119,6 +119,13 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>ViewModel for the XDB export dialog. Manages the export form and operations.</p>
+
+            </p>
 
 
 
@@ -238,14 +245,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="50"
-                                    class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:50</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="67"
+                                    class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:67</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Initiates the export process.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -281,7 +290,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="36" class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:36</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:42</a></div>
                         </td>
                     </tr>
 
@@ -307,10 +316,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:34</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:39</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The form group representing the export parameters.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -334,7 +349,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="37" class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:37</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:43</a></div>
                         </td>
                     </tr>
 
@@ -361,7 +376,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="38" class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:38</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="44" class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:44</a></div>
                         </td>
                     </tr>
 
@@ -388,10 +403,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:35</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:41</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Temporary URL for accessing exported files.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -415,7 +436,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="40" class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:40</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:46</a></div>
                         </td>
                     </tr>
 
@@ -442,7 +463,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:39</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:45</a></div>
                         </td>
                     </tr>
 
@@ -471,9 +492,18 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:42</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="52" class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:52</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Gets the data for the export dialog.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -493,9 +523,18 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:46</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">lib/src/components/xdb/src/xdb-export/xdb-export-dialog.view-model.ts:60</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Gets the preloader channel name.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -518,10 +557,16 @@ import {TMP_URL, ToastData, ToastEvent} from &quot;../../../../global/vars&quot;
 import {usePreloader} from &quot;../../../../modules/preloader/src/use-preloader&quot;;
 import createForm &#x3D; XdbExportDialog.createForm;
 
+/**
+ * ViewModel for the XDB export dialog. Manages the export form and operations.
+ */
 @Injectable()
 export class XdbExportDialogViewModel {
 
+
+  /** The form group representing the export parameters. **/
   readonly form &#x3D; createForm();
+  /** Temporary URL for accessing exported files. **/
   private readonly tmpUrl &#x3D; inject(TMP_URL);
   private readonly config &#x3D; inject(DynamicDialogConfig);
   private readonly ref &#x3D; inject(DynamicDialogRef);
@@ -529,14 +574,25 @@ export class XdbExportDialogViewModel {
   private readonly xdbService &#x3D; inject(XdbService);
   private readonly ts &#x3D; inject(TranslocoService);
 
+  /**
+   * Gets the data for the export dialog.
+   * @returns The export dialog parameters.
+   */
   get data() {
     return this.config.data as XdbExportDialogParams;
   }
 
+  /**
+   * Gets the preloader channel name.
+   * @returns The preloader channel name.
+   */
   get preloaderChannel() {
     return Xdb.PreloaderCn;
   }
 
+  /**
+   * Initiates the export process.
+   */
   export() {
     this.xdbService.exportData(this.form.getRawValue()).pipe(
       usePreloader(this.store, this.preloaderChannel),
